# PropertyAI

./: .cursorrules  .gitignore  README.md  assessmenthistory.json  attom_enumerations.json  codes.json  next.config.js  package-lock.json  package.json  prop_v1_struct.json  property_detail_school.json  property_insights.json  sale_details.json  school.json
components/ui/: badge.tsx
frontend/: layout.tsx  next.config.mjs  package-lock.json  package.json  page.tsx
frontend/app/: layout.tsx  page.tsx
frontend/components/: RenderReport.tsx  animated-gradient-button.tsx  calendar-button.tsx  nav-bar.tsx  print-dialog.tsx  theme-toggle.tsx
frontend/lib/: attom-data-fetcher.ts  codebook-data-fetcher.ts  report-handler.ts  theme-provider.tsx
frontend/styles/: animations.css  demo.css  report.css
frontend/utils/: mappingConfigSource.ts  utils.ts
real_face/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
real_face/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
real_face/components/: FinalCTA.tsx  Hero.tsx  NoiseComponents.tsx  Pricing.tsx  ProblemStatement.tsx  PropertyConfirmationModal.tsx  RecursiveDataTable.tsx  Section.tsx  SocialProof.tsx  SolutionDemo.tsx  ValueProps.tsx  (+9 more)
server/: README.md  attom_struct.py  fly.toml  prop_address.json  prop_transactions.json  property_endpoint_fields.json  pyproject.toml  scraped_data.json
server/api/: PropertyZeroEntropy.py  main.py  zillow.py  zillow_bb.py
server/attom_structs/: sales_v4_struct.json  transportationnoise.json
server/models/: properties.py
(+51 files in other folders)
